--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,15 +1,13 @@
-<div class="navbar">
-    <div class="navbar-inner">
-      <a class="brand" ui-sref="home">Overview</a>
-      <ul class="nav">
-        <li><a ui-sref="home.overview">Overview</a></li>
-        <li><a ui-sref="overview.info">System Info</a></li>
-      </ul>
-    </div>
-  </div>
+<ng-include src="'views/common/_nav_top.html'"></ng-include>
+<div id="main_content">
+    <ng-include src="'views/common/_nav_left.html'"></ng-include>
+</div>
 
-  <div class="row">
-    <div class="span12">
-      <div class="well" ui-view></div>        
-    </div>
-  </div>
+<script type="text/javascript">
+  window.onresize = setSize;
+  setSize();
+  function setSize(){
+    var main_content = document.getElementById("main_content");
+    main_content.style.height = (document.documentElement.clientHeight - 50) + "px";
+  }
+</script>
