--- a/app/views/instances/instances.html
+++ b/app/views/instances/instances.html
@@ -1,4 +1,9 @@
 <h1>
 This instances page
     </h1>
-<div class="gridStyle" ng-grid="gridOptions">
+<div>
+    <div class="gridStyle" ng-grid="gridOptions"></div>
+    <div ng-show="detail" id="detail-container" ng-animate="'animate'" class="my-show-hide-animation">
+    </div>
+</div>
+
