--- a/app/styles/instances.css
+++ b/app/styles/instances.css
@@ -1,7 +1,15 @@
 .gridStyle {
-  width: 600px;
-  height: 300px;
+  width: 100%;
+  height: 500px;
   border: 1px solid #d4d4d4;
+}
+
+.gridStyle .ngCanvas {
+  width: 100% !important;
+}
+
+.gridStyle .ngRow {
+  width: 100% !important;
 }
 
 .ngHeaderContainer {
@@ -110,4 +118,35 @@
 
 .my-show-hide-animation.ng-hide {
   left: 500px;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+li.tab {
+  float: left;
+  padding: 5px 5px 0 5px;
+  margin: 3px 3px 0 3px;
+  color: #696969;
+  background-color: #CCC;
+  border: 1px solid #000;
+  border-bottom-width: 0;
+}
+
+#mainView {
+  padding: 0 1em;
+  clear: both;
+  border: 1px solid black;
+}
+
+.tab.active {
+  color: #000;
+  background-color: #FFF;
+}
+
+#viewOne {
+  height: 600px;
 }
