--- a/app/styles/instances.less
+++ b/app/styles/instances.less
@@ -1,7 +1,14 @@
 .gridStyle {
     border: 1px solid rgb(212,212,212);
-    width: 600px; 
-    height: 300px
+    width: 100%;
+    height: 500px;
+
+.ngCanvas {
+       width: 100% !important;
+       }
+.ngRow {
+       width: 100% !important;
+       }
 }
 
 .ngHeaderContainer {
@@ -44,7 +51,7 @@
 transition: 500ms ease-in all;
 position: relative;
 display: block;
-} 
+}
 .animate-enter.animate-enter-active, .animate-leave {
 left: 0;
 }
@@ -82,3 +89,30 @@ display: block;
   left: 500px;
 }
 
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+li.tab {
+    float: left;
+    border: 1px solid #000;
+    border-bottom-width: 0;
+    margin: 3px 3px 0px 3px;
+    padding: 5px 5px 0px 5px;
+    background-color: #CCC;
+    color: #696969;
+}
+#mainView {
+    border: 1px solid black;
+    clear: both;
+    padding: 0 1em;
+}
+.tab.active {
+    background-color: #FFF;
+    color: #000;
+}
+
+#viewOne {
+  height: 600px;
+}
