Add new sub state for instance detail
Change-Id: I999f4ed512a94b309bcf553e6f4a2c531e414e62

--- a/app/scripts/dashboards/admin/instance/views/index.html
+++ b/app/scripts/dashboards/admin/instance/views/index.html
@@ -24,7 +24,9 @@
           <li><a href="#">Dropdown link</a></li>
         </ul>
         </div>
-        <div ui-if="dataForGrid.length>0" class="gridStyle" ng-grid="gridOptions" ng-style="getTableStyle()"></div>
+        <div class="gridStyle" ng-grid="gridOptions">
+          <div class="detail-panel" ui-view></div>
+        </div>
     </div>
 </script>
 
