--- a/app/styles/instances.less
+++ b/app/styles/instances.less
@@ -1,14 +1,28 @@
 .gridStyle {
-    border: 1px solid rgb(212,212,212);
-    width: 100%;
-    height: 500px;
+  border: 1px solid rgb(212,212,212);
+  width: 100%;
+  height: 500px;
 
-.ngCanvas {
-       width: 100% !important;
-       }
-.ngRow {
-       width: 100% !important;
-       }
+  .ngCellText {
+     text-overflow: inherit;
+     text-align: center;
+     border: none;
+  }
+  .ngHeaderSortColumn {
+    text-align: center;
+  }
+  .ngVerticalBarVisible {
+    background: none;
+  }
+
+  .enableClick {
+    color: #269BD8;
+    cursor: pointer;
+  }
+
+  .ngViewport {
+    height: auto !important;
+  }
 }
 
 .ngHeaderContainer {
