Add class for format api resource
Change-Id: I4ee3622e0acb4d64744ba0213832767a65b86d48

--- a/app/scripts/dashboards/admin/instance/views/index.html
+++ b/app/scripts/dashboards/admin/instance/views/index.html
@@ -25,7 +25,7 @@
         </ul>
         </div>
         <div class="gridStyle" ng-grid="gridOptions">
-          <div class="detail-panel" ui-view></div>
+          <div ui-view ng-show="detail_show" class="detail-panel my-show-hide-animation" ></div>
         </div>
     </div>
 </script>
