--- a/app/scripts/dashboards/admin/instance/views/detail.html
+++ b/app/scripts/dashboards/admin/instance/views/detail.html
@@ -1,3 +1,25 @@
 <div>
- This is detail template.
+    <div class='detail_tab'>
+        <ul>
+            <li ng-repeat='tab in instance_detail_tabs'>{{tab}}</li>
+      </ul>
+    </div>
+    <div class='action_bar_in_detail'>
+      <ul>
+      <li ng-repeat='action in action_list'>{{action}} </li>
+      </ul>
+    </div>
+    <div class='base_info detail_info'>
+      <div class='title'>Detail info</div>
+      <div class='detail_area'>
+        <ul>
+            <li>Name: {{server_detail.name}}</li>
+            <li>Id: {{server_detail.id}}</li>
+        </ul>
+      </div>
+    </div>
+    <div class='other_info detail_info'>
+      <div class='title'>Flavor Info</div>
+    </div>
+    <button ng-click='panle_close()'>Close</button>
 </div>
