--- a/app/styles/instances.less
+++ b/app/styles/instances.less
@@ -7,6 +7,9 @@
      text-overflow: inherit;
      text-align: center;
      border: none;
+     &.unknwon {
+       background: url(../images/processing.gif) no-repeat center;
+    }
   }
   .ngHeaderSortColumn {
     text-align: center;
@@ -17,7 +20,6 @@
 
   .enableClick {
     color: #269BD8;
-    cursor: pointer;
   }
 
   .ngViewport {
@@ -142,25 +144,33 @@ ul {
     padding: 0;
     margin: 0;
 }
-li.tab {
-    float: left;
-    border: 1px solid #000;
-    border-bottom-width: 0;
-    margin: 3px 3px 0px 3px;
-    padding: 5px 5px 0px 5px;
-    background-color: #CCC;
-    color: #696969;
+.instance_tabs {
+  height: 35px;
+  margin-bottom: 5px;
+  border-bottom: 2px solid #DDDDDD;
+  padding-left: 10px;
+  li.tab {
+      float: left;
+      height: 35px;
+      line-height: 35px;
+      padding: 0px 5px 0px 5px;
+      color: #696969;
+      cursor: pointer;
+  }
+  .tab.active {
+      background-color: #FFF;
+      border-bottom: 2px solid #6FB6DA;
+      color: #000;
+  }
 }
 #mainView {
-    border: 1px solid black;
     clear: both;
     padding: 0 1em;
-}
-.tab.active {
-    background-color: #FFF;
-    color: #000;
 }
 
 #viewOne {
   height: 600px;
+  .action_group {
+    margin: 10px 0px;
+  }
 }
